# DeltaStream

./: README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/delta_stream/: _model_builder.py  stream_parser.py
tests/: test_compute_deltas.py  test_finish_json.py  test_generate_model.py  test_parse_chunk_char.py  test_stream_parser.py
